force-app/main/default/objects/NewBatchTransactionComponentConfig__mdt/NewBatchTransactionComponentConfig__mdt.object-meta.xml
<CustomObject>
    <description>PacPoint-IC060419- Created for Phase 1

Used for the Batch Transaction Component on Transaction List View/</description>
    <label>New Batch Transaction Component Config</label>
    <pluralLabel>New Batch Transaction Component Configs</pluralLabel>
</CustomObject>