force-app/main/default/objects/NewBatchTransactionComponentConfig__mdt/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>PacPoint-IC061019- Created for Phase 1</description>
    <label>Division</label>
    <type>TextArea</type>
</CustomField>