force-app/main/default/objects/NewBatchTransactionComponentConfig__mdt/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>PacPoint-IC061019- Created for Phase 1</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>