force-app/main/default/objects/NewBatchTransactionComponentConfig__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>PacPoint-IC061219- Created for Phase 1</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Search Criteria</fullName>
                <default>true</default>
                <label>Search Criteria</label>
            </value>
            <value>
                <fullName>Print Page</fullName>
            </value>
            <value>
                <fullName>Result Columns</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>