force-app/main/default/objects/NewBatchTransactionComponentConfig__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>PacPoint-IC060419- Created for Phase 1</description>
    <inlineHelpText>For Print Page fields only, use this format-&gt; {&quot;ObjectApiName&quot;:&quot;FieldsSeparatedbyComma&quot;}
If from multiple Objects, separate by a comma.</inlineHelpText>
    <label>Value</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>